--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,21 @@ jobs:
         run: npm ci
       - name: run test
         run: npm test
-  
+    depoly:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+      - name: Install dependencies
+        run: npm ci
+      - name: run test
+        run: npm test
+      -name: Build project
+        run: npm run build
+      -name: Depoly
+        run: echo "Deploying ..."
 
